@@ -2,7 +2,7 @@ import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
 
 plugins {
     id("java")
-    id("org.jetbrains.intellij") version "1.4.0" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
+    id("org.jetbrains.intellij") version "1.8.0" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
     id("com.github.ben-manes.versions") version "0.42.0" // https://github.com/ben-manes/gradle-versions-plugin
 }
 
@@ -14,7 +14,7 @@ val pluginVersion: String by project
 val pluginJavaVersion: String by project
 val pluginEnableBuildSearchableOptions: String by project
 
-val twelvemonkeysVersion = "3.8.2"
+val twelvemonkeysVersion = "3.8.3"
 
 val inCI = System.getenv("CI") != null
 
@@ -84,16 +84,6 @@ tasks {
     runIde {
         jvmArgs("-Xms128m")
         jvmArgs("-Xmx1024m")
-        jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
-        // copy over some JVM args from IntelliJ
-        jvmArgs("-Dide.no.platform.update=true")
-        jvmArgs("-Djdk.attach.allowAttachSelf=true")
-        jvmArgs("-Djdk.module.illegalAccess.silent=true")
-        jvmArgs("-Dsun.io.useCanonCaches=false")
-        jvmArgs("-XX:+UseG1GC")
-        jvmArgs("-XX:CICompilerCount=2")
-        jvmArgs("-XX:ReservedCodeCacheSize=512m")
-        jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
     }
     buildSearchableOptions {
         enabled = pluginEnableBuildSearchableOptions.toBoolean()
